# facade-grammar

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
scripts/: run.py  visualize_dag.py
services/sam/: .dockerignore  Dockerfile  pyproject.toml
services/sam/src/sam_service/: __init__.py  __main__.py  api.py  config.py  model.py
src/facade_grammar/: __init__.py  cli.py  config.py  geo.py
src/facade_grammar/clients/: __init__.py  bag3d.py  mapillary.py  osm.py  sam.py
src/facade_grammar/pipeline/: __init__.py  audit.py  debug.py  families.py  grammar.py  induction.py  ingestion.py  outputs.py  per_building.py  projection.py  quality.py  regularization.py  selection.py  spatial.py  synthesis.py  vision.py
src/facade_grammar/schemas/: __init__.py  base.py  buildings.py  grammar.py  photos.py  segmentation.py  tables.py
src/facade_grammar/spatial/: __init__.py  coords.py
src/facade_grammar/vision/: __init__.py  sam3_client.py
src/facade_grammar/viz/: __init__.py  panorama.py  plots.py  synthesis.py
tests/: conftest.py  test_bag3d.py  test_families.py  test_grammar.py  test_induction.py  test_ingestion.py  test_mapillary.py  test_panorama.py  test_regularization.py  test_sam_client.py  test_schemas.py  test_selection.py  test_spatial.py  test_synthesis.py  test_vision.py
